Atualização das Interfaces Front

--- a/InterfacesFront/cli.html
+++ b/InterfacesFront/cli.html
@@ -28,8 +28,8 @@
                 <div class="section-content">
                     <p>Nome: <span id="info-nome">Matheus Martinelli</span></p>
                     <p>CPF: <span id="info-cpf">123.456.789-01</span></p>
-                    <p>Endereço: <span id="info-endereco">Rua Quinze de Novembro, 012</span></p>
-                    <p>Telefone: <span id="info-endereco">(27) 99759-5482</span></p>
+                    <p>Endereço: <span id="info-endereco">Rua Henrique Laranja, 44</span></p>
+                    <p>Telefone: <span id="info-telefone">(27) 99668-9530</span></p>
                 </div>
             </div>
 
