Adição de um modal para inserção de novos clientes

--- a/MVConsultoria.web/wwwroot/clientes.html
+++ b/MVConsultoria.web/wwwroot/clientes.html
@@ -21,7 +21,7 @@
       <div id="hamburgerMenu" class="hamburger">
         <span>☰</span>
         <div class="menu-content">
-          <a href="novo_cliente.html">Novo</a>
+          <a href="#" id="novoCliente">Novo</a>
           <a href="#" id="alterarCliente">Alterar</a>
           <a href="admin.html">Voltar</a>
         </div>
@@ -48,6 +48,117 @@
         </tbody>
       </table>
     </main>
+
+    <!-- Modal para cadastrar novo cliente -->
+    <div id="createClientModal" class="modal">
+      <div class="modal-content">
+        <span class="close-create">&times;</span>
+        <h2>Cadastrar Novo Cliente</h2>
+        <form id="createClientForm">
+          <label for="createNome">Nome:</label>
+          <input type="text" id="createNome" name="createNome" required /><br />
+
+          <label for="createCpf">CPF:</label>
+          <input type="text" id="createCpf" name="createCpf" required /><br />
+
+          <label for="createEmail">Email:</label>
+          <input
+            type="email"
+            id="createEmail"
+            name="createEmail"
+            required
+          /><br />
+
+          <label for="createSenha">Senha:</label>
+          <input
+            type="password"
+            id="createSenha"
+            name="createSenha"
+            required
+          /><br />
+
+          <label for="createEndereco">Endereço:</label>
+          <input
+            type="text"
+            id="createEndereco"
+            name="createEndereco"
+            required
+          /><br />
+
+          <label for="createTelefone">Telefone:</label>
+          <input
+            type="text"
+            id="createTelefone"
+            name="createTelefone"
+            required
+          /><br />
+
+          <label for="createLimiteDeCredito">Limite de Crédito:</label>
+          <input
+            type="number"
+            id="createLimiteDeCredito"
+            name="createLimiteDeCredito"
+            required
+          /><br />
+
+          <button type="button" id="saveNewClientBtn">Salvar</button>
+          <button type="button" id="cancelNewClientBtn">Cancelar</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Modal para editar cliente -->
+    <div id="editModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Editar Cliente</h2>
+        <form id="editClientForm">
+          <label for="editNome">Nome:</label>
+          <input type="text" id="editNome" name="editNome" required /><br />
+
+          <label for="editCpf">CPF:</label>
+          <input type="text" id="editCpf" name="editCpf" required /><br />
+
+          <label for="editEmail">Email:</label>
+          <input type="email" id="editEmail" name="editEmail" required /><br />
+
+          <label for="editEndereco">Endereço:</label>
+          <input
+            type="text"
+            id="editEndereco"
+            name="editEndereco"
+            required
+          /><br />
+
+          <label for="editTelefone">Telefone:</label>
+          <input
+            type="text"
+            id="editTelefone"
+            name="editTelefone"
+            required
+          /><br />
+
+          <label for="editSenha">Senha:</label>
+          <input
+            type="password"
+            id="editSenha"
+            name="editSenha"
+            required
+          /><br />
+
+          <label for="editLimiteDeCredito">Limite de Crédito:</label>
+          <input
+            type="number"
+            id="editLimiteDeCredito"
+            name="editLimiteDeCredito"
+            required
+          /><br />
+
+          <button type="button" id="saveClientBtn">Salvar</button>
+          <button type="button" id="cancelNewClientBtn">Cancelar</button>
+        </form>
+      </div>
+    </div>
 
     <footer>
       <p>&copy; 2024 MV Consultoria</p>
