--- a/MVConsultoria.web/wwwroot/spa.html
+++ b/MVConsultoria.web/wwwroot/spa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Área do Cliente - Consulta Cliente</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="spa.css" />
   </head>
   <body>
     <div id="app" class="container">
@@ -71,7 +71,7 @@
         <!-- Parcelas a Vencer -->
         <div class="section" id="proximas-parcelas-container">
           <div class="section-header">
-            <h4>Próximas Parcelas</h4>
+            <h4>Parcelas a Vencer</h4>
             <button
               class="toggle-section"
               onclick="toggleSection('proximas-parcelas-container')"
@@ -119,7 +119,7 @@
         <!-- Próximo Vencimento e Fatura -->
         <div class="section" id="proximo-vencimento-container">
           <div class="section-header">
-            <h4>Próximo Vencimento</h4>
+            <h4>Próxima Fatura</h4>
             <button
               class="toggle-section"
               onclick="toggleSection('proximo-vencimento-container')"
