Adicionado funcionalidade de pesquisa de clientes

--- a/MVConsultoria.web/wwwroot/clientes.html
+++ b/MVConsultoria.web/wwwroot/clientes.html
@@ -155,7 +155,7 @@
           /><br />
 
           <button type="button" id="saveClientBtn">Salvar</button>
-          <button type="button" id="cancelNewClientBtn">Cancelar</button>
+          <button type="button" id="cancelEditClientBtn">Cancelar</button>
         </form>
       </div>
     </div>
