Inclusão do Dia do Pagamento no Modal de inclusão de clientes. OBS: Ainda não esta pronto

--- a/MVConsultoria.web/wwwroot/clientes.html
+++ b/MVConsultoria.web/wwwroot/clientes.html
@@ -93,6 +93,14 @@
             required
           /><br />
 
+          <label for="createDiaPagamento">Dia de Pagamento:</label>
+          <input
+            type="date"
+            id="createDiaPagamento"
+            name="createDiaPagamento"
+            required
+          /><br />
+
           <label for="createLimiteDeCredito">Limite de Crédito:</label>
           <input
             type="number"
