--- a/MVConsultoria.web/wwwroot/admin.html
+++ b/MVConsultoria.web/wwwroot/admin.html
@@ -12,8 +12,8 @@
         <h2>Painel de Administração</h2>
         <ul>
           <li><a href="clientes.html">Clientes</a></li>
-          <li><a href="#">Compras</a></li>
-          <li><a href="#">Parcelas</a></li>
+          <li><a href="compras.html">Compras</a></li>
+          <li><a href="parcelas.html">Parcelas</a></li>
           <li><a href="#">Usuários</a></li>
           <li><a href="#">Sair</a></li>
         </ul>
