Inclusão dos arquivos de entrega de requisitos prontos em 24/10

--- a/MVConsultoria.web/wwwroot/admin.html
+++ b/MVConsultoria.web/wwwroot/admin.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Painel de Administração</title>
     <link rel="stylesheet" href="admin.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="sidebar">
-            <h2>Painel de Administração</h2>
-            <ul>
-                <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="#">Compras</a></li>
-                <li><a href="#">Parcelas</a></li>
-                <li><a href="#">Usuários</a></li>
-                <li><a href="#">Sair</a></li>
-            </ul>
-            <!-- Adicionando a imagem abaixo do item "Sair" -->
-            <img src="imgs/MV CONSULT IMAGE.jpg" alt="Imagem exemplo" class="sidebar-image">
-        </div>
+      <div class="sidebar">
+        <h2>Painel de Administração</h2>
+        <ul>
+          <li><a href="clientes.html">Clientes</a></li>
+          <li><a href="compras.html">Compras</a></li>
+          <li><a href="parcelas.html">Parcelas</a></li>
+          <li><a href="#">Usuários</a></li>
+          <li><a href="#" id="logoutLink">Sair</a></li>
+        </ul>
+        <!-- Adicionando a imagem abaixo do item "Sair" -->
+        <img
+          src="imgs/MV CONSULT IMAGE.jpg"
+          alt="Imagem exemplo"
+          class="sidebar-image"
+        />
+      </div>
 
-        <div class="content">
-            <h1>Bem-vindo ao Painel de Administração</h1>
-            <p>Selecione uma opção no menu para gerenciar.</p>
-        </div>
+      <div class="content">
+        <h1>Bem-vindo ao Painel de Administração</h1>
+        <p>Selecione uma opção no menu para gerenciar.</p>
+      </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 MV Consultoria</p>
+      <p>&copy; 2024 MV Consultoria</p>
     </footer>
-</body>
+  </body>
 </html>
