--- a/MVConsultoria.web/wwwroot/parcelas.html
+++ b/MVConsultoria.web/wwwroot/parcelas.html
@@ -75,6 +75,22 @@
       </div>
     </div>
 
+    <div id="modalBaixaParcelas" class="modal">
+      <div class="modal-content">
+        <span
+          class="close-modal"
+          onclick="document.getElementById('modalBaixaParcelas').style.display='none'"
+          >&times;</span
+        >
+        <h2>Baixar Parcelas Selecionadas</h2>
+        <ul id="listaParcelasSelecionadas"></ul>
+        <p id="totalParcelasSelecionadas"></p>
+        <label for="valorPago">Valor Pago:</label>
+        <input type="number" id="valorPago" step="0.01" required />
+        <button onclick="processarBaixaParcelas()">Confirmar Baixa</button>
+      </div>
+    </div>
+
     <script src="parcelas.js"></script>
     <!-- Seu JavaScript -->
   </body>
