--- a/MVConsultoria.web/wwwroot/parcelas.html
+++ b/MVConsultoria.web/wwwroot/parcelas.html
@@ -87,7 +87,7 @@
         <p id="totalParcelasSelecionadas"></p>
         <label for="valorPago">Valor Pago:</label>
         <input type="number" id="valorPago" step="0.01" required />
-        <button onclick="processarBaixaParcelas()">Confirmar Baixa</button>
+        <button id="confirmarPagamentoBtn">Confirmar Pagamento</button>
       </div>
     </div>
 
