--- a/MVConsultoria.web/wwwroot/compras.html
+++ b/MVConsultoria.web/wwwroot/compras.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Compras</title>
-    <link rel="stylesheet" href="compras.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="header-container">
@@ -179,9 +179,9 @@
       </div>
     </div>
 
-    <footer>
+    <!--<footer>
       <p>&copy; 2024 MV Consultoria</p>
-    </footer>
+    </footer>-->
 
     <script src="compras.js"></script>
   </body>
