--- a/MVConsultoria.web/wwwroot/parcelas.html
+++ b/MVConsultoria.web/wwwroot/parcelas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parcelas</title>
-    <link rel="stylesheet" href="parcelas.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!-- Seu CSS -->
   </head>
   <body>
